--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -6,30 +6,43 @@ on:
       - main
 
 jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-lastest
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Node.js environment
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          node-version: "18"
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LABTASK2_CB64C }}
+          projectId: labtask2-cb64c
+          channels: live
+          debug: true
+  # build-deploy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     # Step 1: Checkout the repository
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v3
 
-      # # Step 3: Install project dependencies
-      # - name: Install Dependencies
-      #   run: npm install
-      #
-      # # Step 4: Build the project (if applicable)
-      # - name: Build Project
-      #   run: npm run build
+  #     # Step 2: Set up Node.js environment
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "18"
 
-      # Step 5: Deploy to Firebase Hosting
-      - name: Deploy to Firebase Hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          firebase deploy --only hosting
+  # npm ci
+
+  # # Step 3: Install project dependencies
+  # - name: Install Dependencies
+  #   run: npm install
+  #
+  # # Step 4: Build the project (if applicable)
+  # - name: Build Project
+  #   run: npm run build
+
+  # Step 5: Deploy to Firebase Hosting
+  # - name: Deploy to Firebase Hosting
+  #   env:
+  #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+  #   run: |
+  #     firebase deploy --only hosting
